# clef24-search-quality-decision-making

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: .gitignore  ci.yml
algorithmic_quality_decision_making/: __init__.py  __main__.py  cli.py
data/: .gitignore  01-quality-agreement.xlsx  02-quality.xlsx  03-quality-recoded.xlsx  04-quality-recoded-majority-vote.xlsx  05-survey.xlsx  06-study.xlsx
notebooks/: agreement.ipynb  evaluation_quality.ipynb  evaluation_user_study.ipynb
